omni/tests/goldens/types/undefined_ident_17.omni
let result17:int = missing17
